# wsprnetAPI

./: CMakeLists.txt  README.md
include/: json.h  wsprnetAPI.h
src/: json.cc  wsprnetAPI.cc  wsprnetAPIConfig.h.in
